<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="64dp"
    android:layout_marginEnd="64dp">

    <Button
        android:id="@+id/btnReset"
        android:layout_width="32dp"
        android:layout_height="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.860"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.330"
        style="@style/BtnStyleLightGreen"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BtnStyleLightGray">

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/num_zero"
            android:gravity="end"
            tools:text="0"
            app:fontFamily="@font/roboto_mono_thin"
            style="@style/TextViewStyleLightPurple"/>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/plus"
            style="@style/BtnStyleOvalLightGray"/>

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/minus"
            style="@style/BtnStyleOvalLightGray"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>